Fix elements cut off on the top

--- a/src/Components/ThreeCardsPreview/styles.module.css
+++ b/src/Components/ThreeCardsPreview/styles.module.css
@@ -1,5 +1,6 @@
 .container{
     display: flex;
+    margin-top: auto;
     border-radius: 0.6rem;
     overflow-y: hidden;
 }
